--- a/app.ipynb
+++ b/app.ipynb
@@ -21,8 +21,8 @@
     "    \"\"\"This function makes a 3D array of data, a brain scan\"\"\"\n",
     "    from skimage import io\n",
     "    vol = io.imread(\n",
-    "        \"https://s3.amazonaws.com/assets.datacamp.com/blog_assets\"\n",
-    "        \"/attention-mri.tif\")\n",
+    "#         \"https://s3.amazonaws.com/assets.datacamp.com/blog_assets/\" # Since the file has been downloaded\n",
+    "        \"attention-mri.tif\")\n",
     "    return vol\n",
     "\n",
     "\n",
@@ -79,7 +79,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -93,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
