added dynamic mapfor index

--- a/app.ipynb
+++ b/app.ipynb
@@ -8,6 +8,9 @@
    "source": [
     "import panel as pn\n",
     "from bokeh.plotting import figure\n",
+    "import holoviews as hv\n",
+    "from holoviews.streams import Params\n",
+    "hv.extension('bokeh')\n",
     "pn.extension()"
    ]
   },
@@ -67,6 +70,59 @@
     "widgets = pn.Column(button, button)\n",
     "make()\n",
     "widgets\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "volume.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simple Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Image(volume[:,:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_brain_image(axes = 'XY',index = 0):\n",
+    "    if axes == 'XY':\n",
+    "        data = volume[:,:,index] \n",
+    "    elif axes == 'XZ':\n",
+    "        data = volume[:,index,:]\n",
+    "    elif axes == 'YZ': \n",
+    "        data = volume[index,:,:]\n",
+    "    \n",
+    "    image = hv.Image(data)\n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dmap = hv.DynamicMap(get_brain_image, kdims=['index'])\n",
+    "dmap.redim.range(index=(0,67))"
    ]
   },
   {
