added dynamic mapfor axes

--- a/app.ipynb
+++ b/app.ipynb
@@ -116,6 +116,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dmap for Index"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -123,6 +130,24 @@
    "source": [
     "dmap = hv.DynamicMap(get_brain_image, kdims=['index'])\n",
     "dmap.redim.range(index=(0,67))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dmap for both axes and Index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "axes_list = ['XY','XZ','YZ']\n",
+    "dmap = hv.DynamicMap(get_brain_image, kdims=['axes','index'])\n",
+    "dmap.redim.values(axes = axes_list,index = range(67))"
    ]
   },
   {
