added Brain Explorer

--- a/app.ipynb
+++ b/app.ipynb
@@ -10,6 +10,7 @@
     "from bokeh.plotting import figure\n",
     "import holoviews as hv\n",
     "from holoviews.streams import Params\n",
+    "import param\n",
     "hv.extension('bokeh')\n",
     "pn.extension()"
    ]
@@ -148,6 +149,58 @@
     "axes_list = ['XY','XZ','YZ']\n",
     "dmap = hv.DynamicMap(get_brain_image, kdims=['axes','index'])\n",
     "dmap.redim.values(axes = axes_list,index = range(67))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Brain Explorer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BrainExplorer(param.Parameterized):\n",
+    "    \n",
+    "    cmap = param.ObjectSelector(default ='dimgray',objects=hv.plotting.list_cmaps() )\n",
+    "    \n",
+    "    axes_list = ['XY','XZ','YZ']\n",
+    "    axes = param.ObjectSelector(default = 'XY',objects=axes_list)\n",
+    "    \n",
+    "    index = param.Integer(default=10,bounds = (0,max(volume.shape)-1))\n",
+    "    \n",
+    "    @param.depends('axes','index','cmap')\n",
+    "    def get_brain_image(self):\n",
+    "        axes = self.axes\n",
+    "        index = self.index\n",
+    "        cmap = self.cmap\n",
+    "        if axes == 'XY':\n",
+    "            data = volume[:,:,index] \n",
+    "        elif axes == 'XZ':\n",
+    "            data = volume[:,index,:]\n",
+    "        elif axes == 'YZ':\n",
+    "            data = volume[index,:,:]\n",
+    "\n",
+    "        return hv.Image(data).opts(cmap = cmap,\n",
+    "                                   tools = ['hover'],\n",
+    "                                   height = 500,\n",
+    "                                   width = 500,\n",
+    "                                   xlabel = axes[0]+'-Axis', ylabel = axes[1]+'-Axis')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = BrainExplorer()\n",
+    "dmap = pn.Row(hv.DynamicMap(b.get_brain_image),b.param)\n",
+    "dmap"
    ]
   },
   {
