--- a/app.ipynb
+++ b/app.ipynb
@@ -204,6 +204,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dashboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dashboard = pn.Column(\n",
+    "    pn.Column('# <pre> Brain Explorer',\n",
+    "              pn.Spacer(height=50)),\n",
+    "    pn.Row(\n",
+    "        pn.Row(dmap[0],\n",
+    "               pn.Spacer(width = 50),\n",
+    "               pn.Column(\n",
+    "                   dmap[1][1],\n",
+    "                   pn.Spacer(height = 30),\n",
+    "                   dmap[1][2],\n",
+    "                   pn.Spacer(height = 30),\n",
+    "                   dmap[1][3])\n",
+    "              )\n",
+    "        )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dashboard.servable()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Deploy this dashboard from the CLI using:\n",
+    "\n",
+    "```$ panel serve app.ipynb```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
