add watch/callback mechanism

--- a/app.ipynb
+++ b/app.ipynb
@@ -86,6 +86,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 1. Using simple Dynamic Map and Params"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Simple Image"
    ]
   },
@@ -200,14 +207,14 @@
    "source": [
     "b = BrainExplorer()\n",
     "dmap = pn.Row(hv.DynamicMap(b.get_brain_image),b.param)\n",
-    "dmap"
+    "# dmap"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dashboard"
+    "### Dashboard 1"
    ]
   },
   {
@@ -239,6 +246,190 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dashboard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------\n",
+    "-------\n",
+    "------\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Using watch/callback mechanism"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a problem with the above dashboard. Axes `XY`, `XZ`, `YZ` have **68, 189, 157** number of images.\n",
+    "However Index slider above is constant, shows 189 indexes for every axes. For `XY` and `YZ` blank images are shown after index **68** and **157**. This has been solved by creating a custom callback function so that it:\n",
+    "1. Resets index to 0 whenever axis is changed.\n",
+    "2. Resets `end` of index slider according to number of images in that axes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_brain_image(axes,index,cmap):\n",
+    "    if axes == 'XY':\n",
+    "        data = volume[:,:,index] \n",
+    "    elif axes == 'XZ':\n",
+    "        data = volume[:,index,:]\n",
+    "    else: #YZ\n",
+    "        data = volume[index,:,:]\n",
+    "    return hv.Image(data).options(cmap = cmap,\n",
+    "                                   tools = ['hover'],\n",
+    "                                   height = 500,\n",
+    "                                   width = 500,\n",
+    "                                   xlabel = axes[0]+'-Axis', ylabel = axes[1]+'-Axis')\n",
+    "\n",
+    "# get_brain_image('XY',0,'dimgray')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Streams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "axes_list = ['XY','XZ','YZ']\n",
+    "axes = pn.widgets.Select(name = 'axes',value = 'XY',options=axes_list)\n",
+    "axes_stream  = Params(axes,['value'],rename={'value': 'axes'})\n",
+    "\n",
+    "cmaps = pn.widgets.Select(name = 'Color Map', value = 'CMRmap',options=hv.plotting.list_cmaps() )\n",
+    "cmap_stream = Params(cmaps,['value'],rename={'value': 'cmap'})\n",
+    "\n",
+    "index = pn.widgets.IntSlider(name = 'index',end = (volume.shape[2]-1))\n",
+    "index_stream = Params(index,['value'],rename={'value': 'index'})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Callback Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reset_index(event):\n",
+    "    index.value = 0\n",
+    "    axes_selected  = ''.join(event.new)\n",
+    "    if axes_selected == 'XY':\n",
+    "        index.end = (volume.shape[2]-1)\n",
+    "    elif axes_selected == 'XZ':\n",
+    "        index.end = (volume.shape[1]-1)\n",
+    "    elif axes_selected == 'YZ':\n",
+    "        index.end = (volume.shape[0]-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `watch` mechanism"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "axes.param.watch(reset_index,['value'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It keeps a watch on the axes parameters to adjust index values accordingly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dynamic Map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dmap = hv.DynamicMap(lambda axes,index,cmap: get_brain_image(axes,index,cmap),\n",
+    "                     streams=[axes_stream,index_stream,cmap_stream])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dashboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dashboard = pn.Column(\n",
+    "    pn.Column('# <pre> Brain Explorer',\n",
+    "              pn.Spacer(height=30)),\n",
+    "    pn.Row(\n",
+    "        pn.Row(dmap,\n",
+    "               pn.Spacer(width = 50),\n",
+    "               pn.Column(\n",
+    "                   pn.Spacer(height = 50),\n",
+    "                   cmaps,\n",
+    "                   pn.Spacer(height = 30),\n",
+    "                   axes,\n",
+    "                   pn.Spacer(height = 30),\n",
+    "                   index)\n",
+    "              )\n",
+    "        )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dashboard.servable()"
    ]
   },
@@ -250,13 +441,6 @@
     "\n",
     "```$ panel serve app.ipynb```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -275,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
